--- a/products.html
+++ b/products.html
@@ -37,7 +37,7 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="skincaretips.html">Skincare Tips</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="information.html">Information</a></li>
+                <li><a href="information.html">Information Filling</a></li>
                
             </ul>
         </nav>
